--- a/ResearchSupport.html
+++ b/ResearchSupport.html
@@ -204,12 +204,12 @@
         </div>
         <div id="services" class="content">
             <div class="title">
-                <img src="title.jpg" alt="Title size:100px">
+                <img src="Title.jpg" alt="Title size:100px">
                 <div class="title-overlay">Research Support</div>
             </div>
  <div class="research">
             <div class="col-sm-4">
-                <img src="training.jpg" alt="Loan Books">
+                <img src="Training.jpg" alt="Loan Books">
                 <div class="description">
                     <h4>Research Support Training</h4>
                     <p>The Leisure Library offers Research Support Training and
@@ -220,7 +220,7 @@ Our aim is to enhance research skills and knowledge dissemination.
                 </div>
             </div>
             <div class="col-sm-4">
-                <img src="Forum.jpg" alt="Return Books">
+                <img src="forum.jpg" alt="Return Books">
                 <div class="description">
                     <h4>Community Forum</h4>
                     <p>Connect with fellow researchers in our community forum. Share insights, seek advice, and engage in discussions
@@ -228,7 +228,7 @@ Our aim is to enhance research skills and knowledge dissemination.
                 </div>
             </div>
             <div class="col-sm-4">
-                <img src="Tips.jpg" alt="Job Done">
+                <img src="tips.jpg" alt="Job Done">
                 <div class="description">
                     <h4>Tips on How to Support Predatory Journals</h4>
                     <p>Navigate the complex landscape of scholarly publishing. Access valuable tips on 
@@ -236,7 +236,7 @@ identifying and avoiding predatory journals, ensuring the credibility and impact
                 </div>
             </div>
             <div class="col-sm-4">
-                <img src="citations.jpg" alt="Green">
+                <img src="Citations.jpg" alt="Green">
                 <div class="description">
                     <h4>Journal Citation Report</h4>
                     <p>Explore the impact of journals in your field using our Journal Citation Report. Access data on citation metrics,
