--- a/facilities.html
+++ b/facilities.html
@@ -173,7 +173,7 @@
         <div class="content">
         <div id="services" class="container-fluid text-center">
             <div class="title">
-                <img src="title.jpg" alt="Title size:100px">
+                <img src="Title.jpg" alt="Title size:100px">
                 <div class="title-overlay">FACILITIES AND SERVICES</div>
             </div>
             <br>
